<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forum.NewPostActivity"
    android:background="#E0F7FA"> <!-- Fundo azul claro -->

    <LinearLayout
        android:id="@+id/linearLayoutCabecalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#03A9F4"> <!-- Azul primário -->

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_new_post"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:padding="16dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayoutCabecalho">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#4CAF50"
                android:hint="@string/hint_post_title"
                android:textColorHint="#6B6868"
                android:textColor="#000000" />

            <!-- Spinner de Categorias -->
            <Spinner
                android:id="@+id/spinnerCategoriaPost"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:popupBackground="@drawable/button_conversar_background" />

            <EditText
                android:id="@+id/editTextConteudo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#4CAF50"
                android:hint="@string/hint_post_content"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:textColor="#000000"
                android:textColorHint="#5D5C5C" /> <!-- Verde claro -->

            <Button
                android:id="@+id/buttonPublicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:onClick="publicarPost"
                android:text="@string/btn_publish"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>